--- a/photologue_groups/templates/photologue_groups/videos/ajax_load_replies.html
+++ b/photologue_groups/templates/photologue_groups/videos/ajax_load_replies.html
@@ -77,23 +77,23 @@
                         </div>
                         {% endif %}
                         {% endwith %}
-                        {% if node.publication_video_extra_content %}
-                        {% if node.publication_video_extra_content.video %}
-                        {% video node.publication_video_extra_content.video as my_video %}
+                        {% if node.publication_group_multimedia_video_extra_content %}
+                        {% if node.publication_group_multimedia_video_extra_content.video %}
+                        {% video node.publication_group_multimedia_video_extra_content.video as my_video %}
                         {% video my_video "medium" %}
                         {% endvideo %}
                         {% else %}
                         {% comment %} Para publicaciones con URL {% endcomment %}
                         <div class="card small">
                             <div class="card-image">
-                                <img class="lazyload" data-src="{% if node.publication_video_extra_content.image %}{{ node.publication_video_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
-                                <span class="card-title white-text">{{ node.publication_video_extra_content.title }}</span>
+                                <img class="lazyload" data-src="{% if node.publication_group_multimedia_video_extra_content.image %}{{ node.publication_group_multimedia_video_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                <span class="card-title white-text">{{ node.publication_group_multimedia_video_extra_content.title }}</span>
                             </div>
                             <div class="card-content">
-                                <p>{{ node.publication_video_extra_content.description }}</p>
+                                <p>{{ node.publication_group_multimedia_video_extra_content.description }}</p>
                             </div>
                             <div class="card-action">
-                                <a href="{{ node.publication_video_extra_content.url }}">Ver</a>
+                                <a href="{{ node.publication_group_multimedia_video_extra_content.url }}">Ver</a>
                             </div>
                         </div>
                         {% endif %}
@@ -107,7 +107,7 @@
             <!-- OPCIONES DE COMENTARIOS -->
             <div class="options_comentarios">
                 <ul class="opciones">
-                    {% if   user.id == node.author.id or user.id == node.p.author.id %}
+                    {% if user.id == node.author.id or user.id == object.owner_id %}
                     {% comment %} Si estamos visitando un perfil que no es el nuestro {% endcomment %}
                     <li class="trash-comment" title="Borrar comentario"><i class="material-icons md-18">delete_forever</i>
                     </li>
@@ -121,8 +121,6 @@
                         <i class="material-icons md-18">keyboard_arrow_up</i>
                         <i class="like-value">{{ node.likes|zero_to_empty }}</i>
                     </li>
-                    <li title="Añadir a mi skyline" id="share-{{node.pk}}" data-id="{{ node.pk }}" class={% if node.have_shared %}"remove-timeline"{% else %}"add-timeline"{% endif %}><i class="material-icons md-18">format_quote</i>
-                                        <i class="share-values"> {{ node.total_shared|zero_to_empty }}</i></li>
                         <li title="Responder" class="reply-comment" id="reply-caja-comentario-{{ node.pk }}"><i class="material-icons md-18">reply</i>
                      </li>
                  </ul>
@@ -160,7 +158,7 @@
 </div>
 {% endif %}
 <div class="wrapper-reply">
-    {% include "photologue/videos/new_reply.html" %}
+    {% include "photologue_groups/videos/new_reply.html" %}
 </div>
 {% if not node.is_leaf_node %}
 <div class="row">
