--- a/photologue_groups/templates/photologue_groups/videos/publication_detail.html
+++ b/photologue_groups/templates/photologue_groups/videos/publication_detail.html
@@ -58,7 +58,7 @@
                     <img src="{% if object.thumbnail %}{{ object.thumbnail.url }}{% endif %}" title="{{ object.name }}" alt="{{ object.name }}">
                 </div>
                 <div class="col l9 s6 board-photo-link">
-                    <a href="{% url "photologue:pl-video" slug=object.slug %}">Ver vídeo</a>
+                    <a href="{% url "photologue_groups:pl-video" slug=object.slug %}">Ver vídeo</a>
                 </div>
             </div>
         </div>
@@ -132,24 +132,24 @@
                                             </div>
                                         {% endif %}
                                     {% endwith %}
-                                    {% if node.publication_video_extra_content %}
+                                    {% if node.publication_group_multimedia_video_extra_content %}
                                         {% comment %} Para publicaciones con URL {% endcomment %}
-                                        {% if node.publication_video_extra_content.video %}
-                                            {% video node.publication_video_extra_content.video as my_video %}
+                                        {% if node.publication_group_multimedia_video_extra_content.video %}
+                                            {% video node.publication_group_multimedia_video_extra_content.video as my_video %}
                                                {% video my_video "medium" %}
                                             {% endvideo %}
                                         {% else %}
                                         <div class="card small">
                                             <div class="card-image">
                                                 <img class="lazyload" data-src="
-                                                        {% if node.publication_video_extra_content.image %}{{ node.publication_video_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
-                                                <span class="card-title white-text">{{ node.publication_video_extra_content.title }}</span>
+                                                        {% if node.publication_group_multimedia_video_extra_content.image %}{{ node.publication_group_multimedia_video_extra_content.image }}{% else %}{{ STATIC_URL }}dist/img/nuevo_back.png{% endif %}">
+                                                <span class="card-title white-text">{{ node.publication_group_multimedia_video_extra_content.title }}</span>
                                             </div>
                                             <div class="card-content">
-                                                <p>{{ node.publication_video_extra_content.description }}</p>
+                                                <p>{{ node.publication_group_multimedia_video_extra_content.description }}</p>
                                             </div>
                                             <div class="card-action">
-                                                <a href="{{ node.publication_video_extra_content.url }}">Ver</a>
+                                                <a href="{{ node.publication_group_multimedia_video_extra_content.url }}">Ver</a>
                                             </div>
                                         </div>
                                         {% endif %}
@@ -160,7 +160,7 @@
                                 <div class="divider"></div>
                                 <div class="options_comentarios col s12">
                                     <ul class="opciones">
-                                        {% if user.id == node.author.username or user.id == node.author.id %}
+                                        {% if user.id == object.owner_id or user.id == node.author.id %}
                                             <li class="trash-comment" title="Borrar comentario"><i
                                                     class="material-icons">delete_forever</i>
                                             </li>
@@ -174,7 +174,6 @@
                                             <i class="material-icons md-18">keyboard_arrow_up</i>
                                             <i class="like-value">{{ node.likes|zero_to_empty }}</i>
                                         </li>
-                                        <li title="Añadir a mi skyline" id="share-{{node.id}}" data-id="{{ node.pk }}" class={% if node.have_shared %}"remove-timeline"{% else %}"add-timeline"{% endif %}><i class="material-icons md-18">format_quote</i><i class="share-values"> {{ node.total_shared|zero_to_empty }}</i></li>
                                         <li title="Responder" class="reply-comment" id="reply-caja-comentario-{{ node.pk }}"><i class="material-icons md-18">reply</i>
                                         </li>
                                     </ul>
@@ -224,7 +223,7 @@
             <div class="indeterminate blue darken-1"></div>
         </div>
     </div>
-    <script src="{{ STATIC_URL }}js/video_detail.js" type="text/javascript"></script>
+    <script src="{{ STATIC_URL }}js/video_group_detail.js" type="text/javascript"></script>
      <script src="{{ STATIC_URL }}js/socket_photo_publication.js"></script>
     <script>
     UTILS.init([{{ user.pk }}]);
