--- a/photologue_groups/templates/photologue_groups/videos/publications_entries.html
+++ b/photologue_groups/templates/photologue_groups/videos/publications_entries.html
@@ -104,7 +104,7 @@
             <!-- OPCIONES DE COMENTARIOS -->
             <div class="options_comentarios">
                 <ul class="opciones">
-                    {% if user.id == node.author.id or user.id == node.p.author.id %}
+                    {% if user.id == node.author.id or user.id == object.owner_id %}
                     {% comment %} Si estamos visitando un perfil que no es el nuestro {% endcomment %}
                     <li class="trash-comment" title="Borrar comentario"><i class="material-icons md-18">delete_forever</i>
                     </li>
@@ -155,7 +155,7 @@
 </div>
 {% endif %}
 <div class="wrapper-reply">
-    {% include "photologue/videos/new_reply.html" %}
+    {% include "photologue_groups/videos/new_reply.html" %}
 </div>
 {% if not node.is_leaf_node %}
 <div class="row">
