--- a/skyfolk/templates/groups/publication_detail.html
+++ b/skyfolk/templates/groups/publication_detail.html
@@ -163,7 +163,7 @@
                                     <div class="options_comentarios col s12" data-id="{{ node.id }}"
                                          data-board="{{ node.board_group.id }}">
                                         <ul class="opciones">
-                                            {% if user.id == node.author.id %}
+                                            {% if user.id == node.author.id or enable_control_pubs_btn %}
                                                 <li class="trash-comment" title="Borrar comentario"><i
                                                         class="material-icons">delete_forever</i>
                                                 </li>
