--- a/skyfolk/templates/groups/followers.html
+++ b/skyfolk/templates/groups/followers.html
@@ -9,7 +9,7 @@
 {% endblock %}
 {% block content %}
     <div class="container">
-        <input id="group_id" type="hidden" value="{{ group.group_ptr_id }}"/>
+        <input id="group_id" type="hidden" value="{{ group.id }}"/>
         <div class="row">
             <div class="col l12 m10 s12 container-responsive">
                 <div class="row">
