--- a/photologue_groups/templates/photologue_groups/photo_gallery.html
+++ b/photologue_groups/templates/photologue_groups/photo_gallery.html
@@ -36,7 +36,7 @@
                 <form id="submit-photo" class="avatar-form" action="{% url "photologue_groups:upload-photo" %}" method="post"
                       accept-charset="utf-8"
                       enctype="multipart/form-data">{% csrf_token %}
-                    <input type="number" value="{{ group_gallery.group_ptr_id }}" hidden name="pk">
+                    <input type="number" value="{{ group_gallery.id }}" hidden name="pk">
                     <div class="row">
                         <div class="file-field input-field avatar-upload">
                             {{ form.image.errors }}
@@ -104,7 +104,7 @@
             <div id="collection">
                 <form id="collection-form" method="post" action="{% url "photologue_groups:upload-zip" %}" accept-charset="utf-8"
                       enctype="multipart/form-data">{% csrf_token %}
-                    <input type="number" value="{{ group_gallery.group_ptr_id }}" hidden name="group">
+                    <input type="number" value="{{ group_gallery.id }}" hidden name="group">
                     <div class="row">
                         <div class="file-field input-field">
                             <div class="btn blue darken-1 waves-effect waves-light">
@@ -153,7 +153,7 @@
                 <form id="form-video" class="video-form" action="{% url "photologue_groups:upload-video" %}" method="post"
                       accept-charset="utf-8"
                       enctype="multipart/form-data">{% csrf_token %}
-                    <input type="number" value="{{ group_gallery.group_ptr_id }}" hidden name="pk">
+                    <input type="number" value="{{ group_gallery.id }}" hidden name="pk">
                     <div class="row">
                         <div class="file-field input-field">
                             <div class="btn blue darken-1 waves-effect waves-light">
