--- a/skyfolk/templates/groups/configuration/base_cf_group.html
+++ b/skyfolk/templates/groups/configuration/base_cf_group.html
@@ -4,9 +4,9 @@
         <div class="col s12">
             <div class="col l2 m12 s12 wrapper-config-menu">
                 <ul class="menu-config">
-                    <li id="config-group" onclick="location.href='{% url 'user_groups:configuration_group:configuration_group' pk=object.group_ptr_id %}'">Grupo<i
+                    <li id="config-group" onclick="location.href='{% url 'user_groups:configuration_group:configuration_group' pk=object.id %}'">Grupo<i
                             class="material-icons right">person</i></li>
-                    <li id="config-delete-group" onclick="location.href='{% url 'user_groups:configuration_group:configuration_delete_group' pk=object.group_ptr_id %}'">Eliminar grupo<i
+                    <li id="config-delete-group" onclick="location.href='{% url 'user_groups:configuration_group:configuration_delete_group' pk=object.id %}'">Eliminar grupo<i
                             class="material-icons right">delete</i></li>
                 </ul>
             </div>
