--- a/photologue/templates/photologue/publications_entries.html
+++ b/photologue/templates/photologue/publications_entries.html
@@ -54,7 +54,7 @@
                         {% if images %}
                         <div class="row images">
                             {% for image in images %}
-                            <div class="col s4 z-depth-2 center">
+                            <div class="col l4 s12 z-depth-2 center">
                                 <img class="responsive-img lazyload" data-src="{{image.image.url}}" alt="Imagen de: {{ node.p_author }}" title="Imagen de: {{ node.p_author }}">
                             </div>
                             {% endfor %}
