--- a/skyfolk/templates/account/profile_comments.html
+++ b/skyfolk/templates/account/profile_comments.html
@@ -67,7 +67,7 @@
                                                             {% if images %}<br>
                                                                 <div class="row">
                                                                     {% for image in images %}
-                                                                        <div class="col s4">
+                                                                        <div class="col l4 s12">
                                                                             <img class="lazyload responsive-img z-depth-2"
                                                                                  data-src="{{ image.image.url }}"
                                                                                  alt="Imagen de: {{ node.author }}"
@@ -145,7 +145,7 @@
                                                             {% if images %}<br>
                                                                 <div class="row">
                                                                     {% for image in images %}
-                                                                        <div class="col s4">
+                                                                        <div class="col l4 s12">
                                                                             <img class="lazyload responsive-img z-depth-2"
                                                                                  data-src="{{ image.image.url }}"
                                                                                  alt="Imagen de: {{ node.author }}"
@@ -204,7 +204,7 @@
                                             {% if images %}
                                                 <div class="row images">
                                                     {% for image in images %}
-                                                        <div class="col s4 z-depth-2 center">
+                                                        <div class="col l4 s12 z-depth-2 center">
                                                             <img class="lazyload responsive-img"
                                                                  data-src="{{ image.image.url }}"
                                                                  alt="Imagen de: {{ node.author }}"
