+ Mejora de la interfaz de invitaciones

--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -35,6 +35,7 @@
                             class="material-icons right">security</i></li>
                     <li id="config-notifications" onclick="toProfile('{% url 'user_profile:account_notifications' %}')">Notificaciones<i
                             class="material-icons right">notifications</i></li>
+                    <li id="config-invitations" onclick="toProfile('{% url 'invitations:send-invite' %}')">Invitaciones<i class="material-icons right">weekend</i></li>
                     <li id="config-black-list" onclick="toProfile('/config/blocked')">Usuarios bloqueados<i
                             class="material-icons right">block</i></li>
                     <li id="config-delete-account" onclick="toProfile('/config/delete_account')">Eliminar cuenta<i
