--- a/skyfolk/templates/groups/new_reply_theme.html
+++ b/skyfolk/templates/groups/new_reply_theme.html
@@ -1,7 +1,7 @@
 {% comment %}
 Nueva respuesta a una publicacion
 {% endcomment %}
-<div class="hidden" id="caja-comentario-{{ object.pk }}" style="display: none;">
+<div class="hidden" id="caja-theme-{{ object.pk }}" style="display: none;">
     <form class="reply-form" method="post" enctype="multipart/form-data">{% csrf_token %}
         <input name="author" type="hidden" value="{{ request.user.id }}">
         <input name="board_theme" type="hidden" value="{{ object.id }}">
