--- a/skyfolk/static/sass/profile.sass
+++ b/skyfolk/static/sass/profile.sass
@@ -1291,15 +1291,25 @@ ul.table > li
     left: 270px
     top: 147px
 
+.wrapper .widget-wr .widget-item
+  display: block
+  box-shadow: 0 0 10px #ddd
+  padding: 10px
+
+.wrapper .widget-wr .widget-title
+  color: #fff
+
+.wrapper .widget-wr .widget-controls a
+  vertical-align: middle
 /* WIDGET ENCUESTA */
 .stock .wrapper
   margin-top: 0
   height: 457px
 
 .wrapper .widget-wr
-  background-color: #eeeeee
+  background-color: #fff
   width: 100%
-  height: 100%
+  max-height: 100%
   position: relative
   display: block
   margin: auto
