--- a/dash/templates/dash/edit_dashboard_entry_ajax.html
+++ b/dash/templates/dash/edit_dashboard_entry_ajax.html
@@ -7,14 +7,23 @@
     <div class="content-body">
         <form method="post" action="{{ request.path }}" enctype="multipart/form-data" class="form-horizontal">
             {% csrf_token %}
-            <ul class="content-listing generic-form">
-                {% include layout.form_snippet_template_name %}
-                <li class="buttons control-group">
-                    <div class="controls">
-                        <button type="submit" class="submit default-button btn btn-primary">{% trans "Save" %}</button>
-                    </div>
-                </li>
+            {{ wizard.management_form }}
+            {% if wizard.form.forms %}
+                {{ wizard.form.management_form }}
+                {% for form in wizard.form.forms %}
+                    {{ form }}
+                {% endfor %}
+            {% else %}
+                {{ wizard.form }}
+            {% endif %}
 
+            {% if wizard.steps.prev %}
+                <button name="wizard_goto_step" type="submit"
+                        value="{{ wizard.steps.first }}">{% trans "first step" %}</button>
+                <button name="wizard_goto_step" type="submit"
+                        value="{{ wizard.steps.prev }}">{% trans "prev step" %}</button>
+            {% endif %}
+                <input type="submit" value="{% trans "submit" %}"/>
                 {% include "dash/snippets/plugin_help_text.html" %}
             </ul>
         </form>
