--- a/skyfolk/static/css/profile.css
+++ b/skyfolk/static/css/profile.css
@@ -1274,8 +1274,16 @@ ul.table > li {
 .wrapper .widget-wr .widget-title {
   color: #fff; }
 
-.wrapper .widget-wr .widget-controls a {
+.wrapper .widget-wr .widget-controls button {
   vertical-align: middle; }
+
+.wrapper .widget-wr .widget-controls button:hover > i {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-transition-duration: 0.1s;
+  -webkit-transition-timing-function: ease-in;
+  transition-duration: 0.1s;
+  transition-timing-function: ease-in; }
 
 /* WIDGET ENCUESTA */
 .stock .wrapper {
